<resources>
    <string name="app_name">RecipesApp</string>
    <string name="preference_favorites_recipes">com.ifedorov.recipesapp.FAVORITES_PREFS</string>
    <string name="saved_favorites_recipes">SAVED_FAVORITES_RECIPES</string>
    <string name="categories">категории</string>
    <string name="favorite">избранное</string>
    <string name="burgers">бургеры</string>
    <string name="categories_burgers_description">Рецепты всех популярных видов бургеров</string>
    <string name="ingredients">ингредиенты</string>
    <string name="method">способ приготовления</string>
    <string name="method_string">%1$d. %2$s</string>
    <string name="servings">Порции: \u00A0</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="empty_favorites_text">Вы еще не добавили ни одного рецепта в избранное</string>
</resources>