<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerRecipeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_layout_height"
            android:background="@color/white_background_color">

            <ImageView
                android:id="@+id/ivRecipeHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/bcg_categories" />

            <TextView
                android:id="@+id/tvRecipeHeader"
                style="@style/StyleHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/headerRecipeLayout"
                app:layout_constraintStart_toStartOf="@+id/headerRecipeLayout"
                tools:text="@string/burgers" />

            <ImageButton
                android:id="@+id/imgBtnFavorite"
                android:layout_width="@dimen/image_button_favorite_size"
                android:layout_height="@dimen/image_button_favorite_size"
                android:layout_margin="@dimen/spacing_medium"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_to_favorite"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@id/headerRecipeLayout"
                app:layout_constraintTop_toTopOf="@id/headerRecipeLayout"
                tools:src="@drawable/ic_heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/StyleRecipeHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleServingRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings" />

            <TextView
                android:id="@+id/tvServingsValue"
                style="@style/StyleServingRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarServings"
            style="@style/StyleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:min="1"
            android:progress="1"
            tools:progress="2">
        </SeekBar>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:background="@drawable/shape_rounded_recycler"
            android:padding="@dimen/recipe_recycler_spacing"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            style="@style/StyleRecipeHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:background="@drawable/shape_rounded_recycler"
            android:padding="@dimen/recipe_recycler_spacing"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>